test/Error/CheckConst/ConstWrite/Main.ds

-----
-- direct1
--	Has a direct const/mutable conflict between the instance
--	of addS2 and the instance of (:=).
--
addS2 ::	Int -> Int -> Int;
addS2 x y	= (+)@ x y;

direct1 
 = do {	a	= 5;
 	b	= addS2 a 2;
	a	:= 27;
	
	a;
 };


